[package]
name = "gpoint"
version = "0.1.0"
authors = ["Xavier Bestel <xav@bes.tel>"]
edition = "2018"
description = "Wrapper for using libc's `printf(\"%g\")` format for your floating point output"
documentation = "https://docs.rs/gpoint"
readme = "README.md"
repository = "https://github.com/rust-lang/cargo/"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
